@@ -5,6 +5,7 @@ AC_PROG_INSTALL
 KRB5_SIGTYPE
 CHECK_SIGPROCMASK
 CHECK_WAIT_TYPE
+DECLARE_SYS_ERRLIST
 AC_FUNC_VFORK
 AC_HAVE_FUNCS(getcwd getdtablesize)
 AC_CHECK_HEADERS(sys/select.h)
